<resources>
    <string name="app_name">Todo</string>



    <!--user login and registration-->
    <string name="user">User Name</string>
    <string name="email">Email Address</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading…</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_menu">⋮</string>
    <string name="title">Title</string>
    <string name="time">time</string>

    <!--drawer layout-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="edit_note">Edit Note</string>

    <string name="check_network_connectivity">Unable to process request.Please check your network connection</string>
    <string name="retry">Retry</string>
    <string name="create_account"><u>No account yet? <b>Create now</b></u></string>
    <string name="already_have_account"><u>Already have an account? <b>Login now</b></u></string>

    <string name="error_field_required">The field is requied</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="note_title">Note Title</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
</resources>
